# q2mm

./: .calculate.py.swp  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.txt  \  calculate.py  compare.py  constants.py  datatypes.py  default.mass  evaluate.py  filetypes.py  genetic.py  get_most_converged.py  gradient.py  index.html  logging.yaml  loop.py  mkdocs.yml  objects.inv  opt.py  optimizer.py  optimizer_bup.py  pHessMan.py  parameters.py  plot.py  pyproject.toml  remove_dummy.py  setup_esp.py  setup_logging.py  setup_mae_for_cs.py  simplex.py  sitemap.xml  steps.yaml  test.py  (+3 more)
.github/docker/: Dockerfile
.github/envs/: full.yml  jax-md.yml  jax.yml  openmm.yml  psi4.yml  tinker.yml
.github/workflows/: build-images.yml  ci.yml  docs.yml  publish.yml
ForceFields/: Rh_catalyzed_enamide_hydrogenation_FF.fld  thisone
LigandLibrary/: binap.mae  binap_b.mae  binap_mod.mae  bpe.mae  duphos.mae  lc.mae  ld.mae  le.mae  lf.mae  lg.mae  lh.mae  li.mae  lj.mae  lk.mae  ll.mae  lm.mae
ReactionTemplates/: rh_hydrogenation_enamides.mae
Substrates/: A.mae  s1.mae  s2.mae  s3.mae  s3e.mae  s4.mae  s5.mae  s5e.mae  s6.mae  s7.mae  s8.mae  s9.mae
api/: index.html
architecture/: index.html
backends/: index.html
backends/jax-engine/: index.html
backends/jax-md/: index.html
backends/openmm/: index.html
backends/tinker/: index.html
benchmark_results/ch3f/: leaderboard.txt
benchmarks/: .gitignore  AGENTS.md  GPU_BENCHMARKS.md  GPU_BENCHMARK_RESULTS.md  README.md  index.html
benchmarks/gpu/: index.html
benchmarks/published-ff-validation/: index.html
benchmarks/rh-enamide/: index.html
benchmarks/small-molecules/: index.html
data-types/: index.html
data/forcefields/: combined.fld  ru-hydrogenation-ketone.fld
data/reactions/: Pdheckrxn-asymNu.mae
data/substrates_old/: NOTES.txt  s1.mae  s5e.mae  s6.mae  s8.mae  s9.mae
docs/: api.md  architecture.md  backends.md  data-types.md  getting-started.md  index.md  optimization-guide.md  performance.md  platform-support.md  references.md  tutorial.md
docs/backends/: index.md  jax-engine.md  jax-md.md  jax.md  openmm.md  tinker.md
docs/benchmarks/: gpu.md  index.md  published-ff-validation.md  rh-enamide-jaguar.md  rh-enamide-psi4.md  rh-enamide.md  small-molecules.md
docs/reference/: constants.md  index.md
example_data/: atom.typ  c2.01.in  c2.01.mae  c2.out  c2scan.01.in  c2scan.02.in  c2v1.01.in  c2v1.01.mae  c2v1.out  c2v2.01.in  c2v2.01.mae  c2v2.out  cs.01.in  cs.01.mae  cs.out  mm3.fld  tsa.01.in  tsa.01.mae  tsa.out  tse.01.in  tse.01.mae  tse.out
examples/ethane/: GS.fchk  GS.mol2  README.md  TS.fchk  TS.mol2
examples/q2mm-legacy/: atom.typ  loop.in  meets1.mol2  meets2.mae  (+2 more)
forcefields/: atom.typ  combined.fld  os-dihydroxylation-alkene.fld  rh-hydrogenation-enamide.fld  rh_catalyzed_enamide_hydrogenation.fld  sulfone.fld  sulfones.fld
getting-started/: index.html
hooks/: pre-commit
ligands/: binap-b.mae  binap-ether-r.mae  binap.mae  bpe.mae  duphos.mae  lc.mae  ld.mae  le.mae  lf.mae  lg.mae  lh.mae  li.mae  lj.mae  lk.mae  ll.mae  lm.mae  phox2.mae  phox6.mae
optimization-guide/: index.html
options/: constants.yaml  logging.yaml  masses.yaml  steps.yaml  weights.yaml
platform-support/: index.html
q2mm/: .calculate.py.swp  .compare.py.swo  .compare.py.swp  .datatypes.py.swl  .datatypes.py.swm  .datatypes.py.swn  .datatypes.py.swp  .filetypes.py.swp  .gradient.py.swp  .gui.py.swn  .gui.py.swo  .gui.py.swp  .loop.py.swp  .opt.py.swn  .parameters.py.swo  __init__.py  bu.py  calculate.py  compare.py  constants.py  datatypes.py  elements.py  filetypes.py  geometry.py  gradient.py  gui.py  indep_calculate.py  just_compare.py  linear_algebra.py  loop.py  opt.py  parameters.py  sch_util.py  schrod_indep_filetypes.py  seminario.py  setup_esp.py  simplex.py  utilities.py
q2mm_example/: meets1.mae  mm3.fld  qparam.txt
reactions/: Pdheckrxn-symNu.mae  readme  rh-hydrogenation-enamide.mae  rh-hydrogenation-enamides.mae  rh_hydrogenation_enamides.mae  ru-hydrogenation-ketone.com  ru-hydrogenation-ketone.mae
references/: index.html
screen/: README.md  merge.py  merge_170215.py  merger.py  setup_com_from_mae.py  setup_com_from_mae_many.py  setup_mae_from_com.py  setup_mae_from_com_many.py  vs.py
screen_sample/: NOTE.txt  example.sh  mm3.fld  step-3_merge-output-in-one.mae  step-6_data-analysis.csv
scripts/: ci-local.sh  ci_local.sh  float32_experiment.py  gen_ref_pages.py  generate_benchmarks.py  generate_optimization_fixtures.py  generate_psi4_reference.py  mixed_precision_experiment.py  regenerate_full_loop_fixtures.py  regenerate_parity_fixtures.py  run_cycling_benchmark.py  setup_upstream_worktree.ps1  setup_upstream_worktree.sh  validate_against_upstream.ps1  validate_against_upstream.py
search/: search_index.json
smiles_to_catvs_example/: allyl6.mae  mm3.fld
substrates/: NOTES.txt  acetophenone.mae  enamide-ac-h.mae  enamide-phz-ac-h.mae  enamide-phz-bn-me.mae  s2.mae  s3.mae  s3e.mae  s4.mae  s5.mae  s5e.mae  s6.mae  s7.mae  s8.mae  s9.mae
substrates_old/: s2.mae  s3.mae  s3e.mae  s5.mae  s7.mae
test/: _shared.py  compare_outputs.py  conftest.py  test_batched_eval.py  test_calculate.py  test_cmap.py  test_datatypes.py  test_eigenmatrix.py  test_evaluators.py  test_ffs.py  test_hessian_element.py  test_linear_algebra.py  test_method_d_e.py  test_method_e_pipeline.py  test_mm3_jax.py  test_models.py  test_openmm_platform.py  test_optimizer_jac.py  test_param.py  test_parameter_cycling.py  test_reference_analysis.py  test_reference_data.py  test_reference_yaml.py  test_registry.py  test_seminario.py  test_units.py  test_urey_bradley.py  test_utilities.py  test_zcompare.py
tools/: change_mae_atom_type.py  clean_mae.py  clean_mae_same.py  clean_mae_same_restart.py  clean_mae_same_update.py  count_steps.py  format-ff.py  invert-chirality.py  many_sumq.py  merge_structures.py  remove_dummy.py  setup_cs.py  setup_cs_many.py  setup_mae_for_cs.py  setup_qm.py  setup_sh_from_com.py  submit.py  sumq.py
tutorial/: index.html
(+983 files in other folders)
