[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "q2mm"
dynamic = ["version"]
description = "Quantum-guided molecular mechanics force field optimization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Eric Hansen" },
]
keywords = [
    "force-field",
    "molecular-mechanics",
    "optimization",
    "transition-state",
    "computational-chemistry",
    "Q2MM",
    "OpenMM",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy",
]

[tool.setuptools_scm]
# Version derived from git tags: git tag v5.0.0 → version 5.0.0
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project.optional-dependencies]
amber = [
    "parmed",
]
openmm = [
    "openmm",
]
optimize = [
    "scipy",
]
jax = [
    "jax",
    "jaxlib",
    "scipy",
]
qcel = [
    "qcelemental",
]
dev = [
    "pytest",
    "ruff",
    "scipy",
    "parmed",
    "qcelemental",
    "openmm",
    "build",
]
docs = [
    "mkdocs-material",
]
all = [
    "openmm",
    "parmed",
    "scipy",
    "qcelemental",
    "jax",
    "jaxlib",
]

[project.scripts]
q2mm-benchmark = "q2mm.diagnostics.cli:main"

[project.urls]
Homepage = "https://github.com/ericchansen/q2mm"
Documentation = "https://ericchansen.github.io/q2mm/"
Repository = "https://github.com/ericchansen/q2mm"
Issues = "https://github.com/ericchansen/q2mm/issues"
Changelog = "https://github.com/ericchansen/q2mm/releases"

[tool.setuptools.packages.find]
include = ["q2mm*"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "SIM"]
ignore = [
    "E402",   # module-import-not-at-top (conditional imports)
    "E501",   # line too long (let formatter handle)
    "E701",   # multiple statements on one line
    "E741",   # ambiguous variable name (common in scientific code)
    "F401",   # unused imports (many are re-exports or conditional)
    "F402",   # import shadowed by loop variable (accepted in existing code)
    "F403",   # import star
    "F405",   # undefined from import star
    "F811",   # redefined while unused
    "F841",   # unused variable (common in scientific iteration)
    "UP028",  # yield-in-for-loop
    "SIM102", # collapsible-if (readability preference)
    "SIM103", # needless-bool
    "SIM105", # suppressible-exception
    "SIM108", # ternary (readability preference)
    "SIM113", # enumerate-for-loop
    "SIM115", # open-file-with-context-handler
    "SIM201", # negate-equal-op
]

[tool.ruff.lint.per-file-ignores]
# Legacy parsers use unimported List type hints and have scoping quirks
"q2mm/parsers/gaussian.py" = ["F821"]
"q2mm/parsers/jaguar.py" = ["F821"]
"q2mm/parsers/macromodel.py" = ["F821"]
"q2mm/parsers/mol2.py" = ["F821"]
"q2mm/parsers/structures.py" = ["F821"]
# Legacy test with undefined references in incomplete refactoring
"test/test_linear_algebra.py" = ["F821"]
